# bowling-game-kata

./: .gitignore  .travis.yml  BowlingGameKata.sln  BowlingGameKata.vcxproj  BowlingGameKata.vcxproj.filters  CMakeLists.txt  README.md
include/: Game.h  Scorer.h
lib/cpputest/lib/: CppUTestd.lib
src/: CMakeLists.txt  Game.cpp  Scorer.cpp
tests/: AllTests.vcxproj  AllTests.vcxproj.filters  CMakeLists.txt  GameTest.cpp
